@@ -15,6 +15,12 @@
     </group>
   </view>
 
+  <team name="Unknown" mail="unknown">
+    <coordinator mail="menthos@gnome.org" />
+    <url uri="http://developer.gnome.org/" description="GNOME Translation Project" />
+    <url uri="http://developer.gnome.org/projects/gtp/teams.html#starting" description="Create your Translation Team" />
+  </team>
+
   <team name="Spanish" mail="traductores@es.gnome.org">
     <coordinator mail="gpoo@ubiobio.cl" />
     <url uri="http://www.es.gnome.org/" description="GNOME Hispano" />
