@@ -1,5 +1,9 @@
 2003-09-28  Carlos Perelló Marín <carlos@gnome.org>
 
+	* status-gnome.xml: Added a default team information.
+
+2003-09-28  Carlos Perelló Marín <carlos@gnome.org>
+
 	* status-gnome.xml: Added a sample about team information.
 
 2003-09-27  Christian Neumair  <chris@gnome-de.org>
